mutants.out/log/src__http__response_builder.rs_line_213_col_9_002.log

*** src/http/response_builder.rs:213:9: replace <impl IntoResponsePart for Vec<(T, T)>>::into_response_part -> ResponsePart<T> with ResponsePart::new(Default::default())

*** mutation diff:
--- src/http/response_builder.rs
+++ replace <impl IntoResponsePart for Vec<(T, T)>>::into_response_part -> ResponsePart<T> with ResponsePart::new(Default::default())
@@ -205,17 +205,17 @@
     fn into_response_part(self) -> ResponsePart<T> {
         ResponsePart::Header(self.0, self.1)
     }
 }
 
 // Implement the IntoResponsePart trait for vectors of tuples of two elements to represent multiple headers
 impl<T: Into<String>> IntoResponsePart<T> for Vec<(T, T)> {
     fn into_response_part(self) -> ResponsePart<T> {
-        ResponsePart::Headers(self)
+        ResponsePart::new(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
 
     #[test]


*** /Users/aw/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --manifest-path /var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp/Cargo.toml --all-features
   Compiling http-server-starter-rust v0.1.0 (/var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp)
error[E0599]: no variant or associated item named `new` found for enum `ResponsePart` in the current scope
   --> src/http/response_builder.rs:213:23
    |
193 | pub enum ResponsePart<T> {
    | ------------------------ variant or associated item `new` not found for this enum
...
213 |         ResponsePart::new(Default::default()) /* ~ changed by cargo-mutants ~ */
    |                       ^^^ variant or associated item not found in `ResponsePart<_>`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `new`, perhaps you need to implement it:
            candidate #1: `parking_lot_core::thread_parker::ThreadParkerT`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `http-server-starter-rust` (bin "http-server-starter-rust" test) due to 1 previous error

*** result: Failure(101)
